# jsonschema-equivalent

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  all_rules.md  build.rs
.github/workflows/: build.yml  publish.yaml  security-audit.yaml
rule_processor_logger/: Cargo.toml
rule_processor_logger/src/: lib.rs
src/: constants.rs  helpers.rs  lib.rs  primitive_type.rs
src/helpers/: intersect.rs  is.rs  mod.rs  replace.rs  types.rs
src/keywords/: additional_items.rs  additional_properties.rs  all_of.rs  any_of.rs  const_.rs  enum_.rs  if_.rs  items.rs  min_max.rs  mod.rs  property_names.rs  required.rs  type_.rs
src/keywords/macro_/: ignore_keywords.rs  maximum_minimum_related_keywords.rs  mod.rs
tests/: all_rules.rs  json_schema_test_suite.rs
