# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "jsonschema-equivalent"
version = "0.1.0"
authors = ["Samuele Maci <macisamuele@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["jsonschema"]
categories = ["web-programming"]
description = "A JSON Schema optimiser library."
repository = "https://github.com/macisamuele/jsonschema-equivalent"
documentation = "http://docs.rs/jsonschema-equivalent"
license = "MIT"

[dev-dependencies]
pathsep = "0"
test-case = "1"

[dependencies]
serde_json = "1"

