[package]
name = "jsonschema-equivalent-rule-processor-logger"
version = "0.1.0"
authors = ["Samuele Maci <macisamuele@gmail.com>"]
edition = "2018"
publish = true
categories = ["development-tools::procedural-macro-helpers"]
description = "Procedural Macro Attribute to simplify and unify logging logic for jsonschema-equivalent crate"
repository = "https://github.com/macisamuele/jsonschema-equivalent"
documentation = "http://docs.rs/jsonschema-equivalent-rule-processor-logger"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dev-dependencies]
log = "0"

[dependencies]
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "1", features = [ "full" ] }
